Commit 5 : Images, Fix width, Background for heading container, basic spacings and display Add.

--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,15 @@
 /* Heading Style */
 .heading_container {
     font-family: gearfont;
+    height: 30rem;
+    width: 60rem;
+    background-image: url(../image/header_background.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 0 0 30px 30px;
+    margin-bottom: 2rem;
 }
